--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="button">
+    <button class="btn">Sign up</button>
+    </div>
+    
     <div class="grid-container" id="grid-container"></div>
     <script src="script.js"></script>
 </body>
