--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="button">
-    <button class="btn">Sign up</button>
-    </div>
-    
+    <button id="redoGrid">Click to Update Grid</button>
+
     <div class="grid-container" id="grid-container"></div>
     <script src="script.js"></script>
 </body>
